<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" >
    
    <PreferenceCategory android:title="@string/abtCtgTitle">
        <Preference
			android:title="@string/abtTitle"
			android:key="about" >            
        </Preference>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/smsCtgTitle" >
	    <CheckBoxPreference
	        android:key="enableSMS"
	        android:title="@string/enableSMSTtitle"
	        android:summary="@string/enableSMSDescription">
	    </CheckBoxPreference>
        <CheckBoxPreference
            android:key="enableCall"
            android:title="@string/enableCallTitle"
            android:summary="@string/enableCallDescription"
            android:defaultValue="false">
        </CheckBoxPreference>
        <EditTextPreference
            android:key="phoneNumber"
            android:title="@string/phoneNoTitle" 
            android:summary="@string/phoneNoDescription" >
        </EditTextPreference>
        	   	
	</PreferenceCategory>
	
    <PreferenceCategory android:title="@string/emailCtgTitle">
        <CheckBoxPreference
            android:key="enableEmail"
            android:title="@string/enableEmailTitle" 
            android:summary="@string/enableEmailDescription">
        </CheckBoxPreference>
        <EditTextPreference
            android:key="emailToAddress"
            android:title="@string/emailToAddressTitle" 
            android:summary="@string/emailToAddressDescription" >
        </EditTextPreference>
        <EditTextPreference
            android:key="emailFromAddress"
            android:title="@string/emailFromAddressTitle" 
            android:summary="@string/emailFromAddressDescription" >
        </EditTextPreference>
        <EditTextPreference
            android:key="emailFromPassword"
            android:title="@string/emailFromPasswordTitle" 
            android:summary="@string/emailFromPasswordDescription" 
            android:password="true" >
        </EditTextPreference>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/sensitivityCtgTitle" >
	    <ListPreference     
	        android:key="sensitivity"
	        android:title="@string/sensitivityTitle"
            android:summary="@string/sensitivityDescription"
            android:entries="@array/listArray" />
	</PreferenceCategory>		

    <PreferenceCategory android:title="@string/logfileCtgTitle" >
        <CheckBoxPreference     
            android:key="logScore"
            android:title="@string/logScoreTitle"
            android:summary="@string/logScoreDescription" >
        </CheckBoxPreference>        
        <CheckBoxPreference     
            android:key="saveEvent"
            android:title="@string/saveEventTitle"
            android:summary="@string/saveEventDescription" >
        </CheckBoxPreference>        
    </PreferenceCategory>       
        
</PreferenceScreen>